--- a/ui/templates/fdb-recentlist.html
+++ b/ui/templates/fdb-recentlist.html
@@ -16,7 +16,7 @@
         {{range .Flights}}
         <p style="text-align:left">
           <a target="_blank" href="{{.TrackUrl}}">[map view]</a>
-          <code>{{.IdentString}}</code>
+          <code>{{.IdentString}}</code> {{.String}}
         </p>
         {{end}}
       </div>
