Second pass the flight DB thing. Lots of stuff.

--- a/ui/templates/fdb-recentlist.html
+++ b/ui/templates/fdb-recentlist.html
@@ -5,24 +5,22 @@
   <body>
     <div class="allstack">
       <h1>Recent</h1>
-      <p>Today: [<a href="/fdb/today?tags=SERFR1">SERFR1</a>,
-        <a href="/fdb/today?tags=BRIXX">BRIXX</a>,
-        <a href="/fdb/today?tags=ClassB:FA">ActionableClassB</a>]<br/>
-        Yesterday: [<a href="/fdb/yesterday?tags=SERFR1">SERFR1</a>,
-        <a href="/fdb/yesterday?tags=BRIXX">BRIXX</a>,
-        <a href="/fdb/yesterday?tags=ClassB:FA">ActionableClassB</a>]<br/>
-      </p>
       <div class="box">
+        <table>
         {{range .Flights}}
-        <p style="text-align:left">
-          <a target="_blank" href="{{.TrackUrl}}">[map view]</a>
-          <code>{{.IdentString}}</code> {{.String}}
-        </p>
+        <tr>
+          <td>
+            [<a target="_blank" href="{{.TrackUrl}}">map</a>]
+            <code>{{.IdentityString}}</code>
+          </td><td>
+            {{.AnyTrack.ShortString}}
+          </td>
+        </tr>
         {{end}}
+        </table>
       </div>
       <div class="stack">
         <h3>Notes</h3>
-        <p>Blah</p>
       </div>
     </div>
   </body>
