Revamp much of the UI & reporting, so it can graft onto v1 Much cleaner reports model (geo restrictions)

--- a/ui/templates/fdb-recentlist.html
+++ b/ui/templates/fdb-recentlist.html
@@ -4,7 +4,7 @@
   {{template "header"}}
   <body>
     <div class="allstack">
-      <h1>Recent</h1>
+      <h1>Recent ({{len .Flights}})</h1>
       <div class="box">
         <table>
         {{range .Flights}}
