--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -5,7 +5,7 @@
   <body>
     <h1>Reports</h1><p/>
 
-    <form action="{{.FormUrl}}" method="post">
+    <form action="{{.FormUrl}}" method="get">
       <div class="stack">
 
         <div class="box">
@@ -31,7 +31,17 @@
 -->
 
           <tr><td colspan="2"><hr/></td></tr>
-          <tr><td colspan="2"><b>Time filtering</b> - define a time range for flights.
+          <tr><td colspan="2"><b>Flight restrictions</b> - efficiently
+          trim the dataset. TBD.<br/>
+          </td></tr>
+          <tr>
+            <td>Flight tags</td>
+            <td><input type="text" name="tags" size="12" value=""/>
+            (e.g. <code>SERFR1</code>, <code>OCEANIC</code>)</td>
+          </tr>
+
+          <tr><td colspan="2"><hr/></td></tr>
+          <tr><td colspan="2"><b>Time restrictions</b> - define a time range for flights.
               Approximate. If you pick more than a few days, it may timeout.<br/>
           </td></tr>
 
@@ -43,16 +53,17 @@
           </tr>
           
           <tr><td colspan="2"><hr/></td></tr>
-          <tr><td colspan="2"><b>Geo filtering</b> - define a region of interest;
-              pick a center for a box or circle. Leave
-              blank to report on all flights. Don't use regions less than a few KM in size.<br/><br/>
+          <tr><td colspan="2"><b>Geo restrictions (1)</b>: Define a region of interest;
+              pick a center for a box. Leave
+              blank to report on all flights. Don't use regions less
+              than a few KM in size.<br/>
           </td></tr>
             
           <tr>
             <td>Center</td>
             <td>
               <select name="waypoint">
-                <option value="" selected="1">(none)</option> 
+                <option value="" selected="1">(waypoint)</option> 
                 {{range .Waypoints}}
                 <option value="{{.}}">{{.}}</option>{{end}}
               </select>, or latlong
@@ -64,11 +75,46 @@
           <tr>
             <td>Size (KM)</td>
             <td>
-              Radius <input type="text" name="radiuskm" size="4" value=""/>, or
+<!--              Radius <input type="text" name="radiuskm" size="4" value=""/>, or-->
               Boxside <input type="text" name="sidekm" size="4" value=""/>
             </td>
           </tr>
 
+          <tr><td colspan="2"><br/><b>Geo restrictions (2)</b>:
+              Or, define a geo window that flights must fly through.<br/>
+          </td></tr>
+<!--
+Skyline Window
+37.495131, -122.368961
+37.206145, -122.048494
+-->
+          <tr>
+            <td>To</td>
+            <td>
+<!--              <input type="text" name="winfromlat" size="11" value="37.206145"/>,
+              <input type="text" name="winfromlong" size="11" value="-122.048494"/>-->
+              <input type="text" name="winfromlat" size="11" value=""/>,
+              <input type="text" name="winfromlong" size="11" value=""/>
+            </td>
+          </tr>            
+          <tr>
+            <td>From</td>
+            <td>
+<!--              <input type="text" name="wintolat" size="11" value="37.495131"/>,
+              <input type="text" name="wintolong" size="11" value="-122.368961"/>-->
+              <input type="text" name="wintolat" size="11" value=""/>,
+              <input type="text" name="wintolong" size="11" value=""/>
+            </td>
+          </tr>
+<!--          <tr>
+            <td>Altitude</td>
+            <td>
+              Min:<input type="text" name="winmin" size="7" value=""/>,
+              Max:<input type="text" name="winmax" size="7" value=""/>
+              (blank == no limit)
+            </td>
+          </tr>-->
+          
           <tr><td colspan="2"><hr/></td></tr>
           <tr><td colspan="2"><b>Report-specific options</b> - some reports use these tolerance parameters.<br/><br/>
           </td></tr>
@@ -80,12 +126,20 @@
             </td>
           </tr>
 
-          <tr><td colspan="2"><hr/></td></tr>
           <tr>
-            <td>Flight tags</td>
-            <td><input type="text" name="tags" size="12" value=""/> (e.g. <code>SERFR1</code>)</td>
+            <td>Reference Point</td>
+            <td>
+              <select name="refpt_waypoint">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>, or latlong
+              <input type="text" name="refptlat" size="7" value=""/>,
+              <input type="text" name="refptlong" size="7" value=""/>
+            </td>
           </tr>
 
+          
           <tr><td colspan="2"><hr/></td></tr>
         </table>
 
@@ -95,7 +149,7 @@
         </div>
 
 <!--
-        <p> Debug: <input type="text" name="debug" size="1"/></p>
+        <p> Debug: <input type="text" name="debug" value="1" size="1"/></p>
 -->
         <p>Data only really starts at 11:30am on Wed Sep 23.</p>
 
