Lotsa lotsa stuff

--- a/ui/templates/fdb-recentlist.html
+++ b/ui/templates/fdb-recentlist.html
@@ -4,7 +4,7 @@
   {{template "header"}}
   <body>
     <div class="allstack">
-      <h1>Recent ({{len .Flights}})</h1>
+      <h1>Recent ({{len .Flights}}) {{.Tags}}</h1>
       <div class="box">
         <table>
         {{range .Flights}}
@@ -12,6 +12,10 @@
           <td>
             [<a target="_blank" href="{{.TrackUrl}}">map</a>]
             <code>{{.IdentityString}}</code>
+          </td><td>
+            {{.TagList}}
+          </td><td>
+            {{.WaypointList}}
           </td><td>
             {{.AnyTrack.ShortString}}
           </td>
