--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -5,7 +5,7 @@
   <body>
     
     <div class="allstack">
-      <h1>Report {{.R.Name}}: {{.R.Start.Format "Mon 01/02"}} - {{.R.End.Format "Mon 01/02"}}, 
+      <h1>Report {{.R.Name}}: {{.R.Start.Format "Mon 2006/01/02"}} - {{.R.End.Format "Mon 2006/01/02"}}, 
         {{len .R.RowsHTML}} flights</h1><br/>
 
       <div class="box">
@@ -37,6 +37,11 @@
       
       <div class="stack">
         <h3>Notes</h3>
+        {{if .R.UserEmail}}
+        <p>Report run for {{.R.UserEmail}}
+          {{if .R.CanSeeFOIA}} (can see FOIA data) {{end}}
+        </p>
+        {{end}}
       </div>
     </div>
   </body>
