Tidy up the /fdb/vector JSON handler in v1 & v2 Get the side view working against MLAT and FOIA data

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -38,7 +38,7 @@
       <div class="stack">
         <h3>Notes</h3>
         {{if .R.UserEmail}}
-        <p>Report run for {{.R.UserEmail}}
+        <p>User <code>{{.R.UserEmail}}</code>
           {{if .R.CanSeeFOIA}} (can see FOIA data) {{end}}
         </p>
         {{end}}
