Add altitude bounds to geo-restrictions

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -91,6 +91,15 @@
             </td>
           </tr>
 
+          <tr>
+            <td>Altitude (feet)</td>
+            <td>
+              Min:<input type="text" name="altitudemin" size="7" value=""/>,
+              Max:<input type="text" name="altitudemax" size="7" value=""/>
+              (blank == no limit)
+            </td>
+          </tr>
+
           <tr><td colspan="2"><br/><b>Geo restrictions (2)</b>:
               And/or, define a geo <b>{window}</b> that flights must fly through.<br/>
           </td></tr>
