Make acceleration graphs optional, via tickbox.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -36,7 +36,7 @@
               <b>Visualize selected as</b>:[
              <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>,<!-- 
               <button type="submit" name="viewtype" value="track" class="btn-link">TrackPoints</button>,-->
-              <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>@<input type="text" name="length" size="3" value="80"/>NM,<input type="text" name="alt" size="5" value="30000"/>ft.]
+              <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>@<input type="text" name="length" size="3" value="80"/>NM,<input type="text" name="alt" size="5" value="30000"/>ft,accel:<input type="checkbox" name="showaccelerations"/>]
         </td></tr>
         {{range .R.RowsHTML}}
         <tr>
