--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -34,6 +34,7 @@
               options: [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
+              showAngle:<input type="checkbox" name="showangleofinclination"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
               ]
