Add 'noFurn' and 'dest' visualization options. Make descent graphs work against arbitrary airports.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -33,10 +33,12 @@
               <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>
               options: [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
+              noFurn:<input type="checkbox" name="nofurniture"/>;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
               showAngle:<input type="checkbox" name="showangleofinclination"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
+              dest:<input size="5" type="text" name="airportdest" value="KSFO"/>
               ]
           </td></tr>
           <tr><td colspan="8">
