Tidy up the report form; use named positions more consistently

--- a/ui/templates/widget-waypoint-or-pos.html
+++ b/ui/templates/widget-waypoint-or-pos.html
@@ -1,5 +1,5 @@
 {{define "widget-waypoint-or-pos"}}
-              <select name="{{.Name}}_waypoint">
+              <select name="{{.Name}}_name">
                 <option value="" selected="1">(waypoint)</option> 
                 {{range .Waypoints}}
                 <option value="{{.}}">{{.}}</option>{{end}}
