--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -73,21 +73,15 @@
           <tr>
             <td>Center</td>
             <td>
-              <select name="waypoint">
-                <option value="" selected="1">(waypoint)</option> 
-                {{range .Waypoints}}
-                <option value="{{.}}">{{.}}</option>{{end}}
-              </select>, or latlong
-              <input type="text" name="centerlat" size="7" value=""/>,
-              <input type="text" name="centerlong" size="7" value=""/>
+              {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "boxcenter"}}
             </td>
-          </tr>
+          </tr>            
           
           <tr>
             <td>Size (KM)</td>
             <td>
-<!--              Radius <input type="text" name="radiuskm" size="4" value=""/>, or-->
-              Boxside <input type="text" name="sidekm" size="4" value=""/>
+<!--              Radius <input type="text" name="boxradiuskm" size="4" value=""/>, or-->
+              Boxside <input type="text" name="boxsidekm" size="4" value=""/>
             </td>
           </tr>
 
@@ -112,34 +106,18 @@ Skyline Window
           <tr>
             <td>To</td>
             <td>
-              <input type="text" name="winfromlat" size="11" value=""/>,
-              <input type="text" name="winfromlong" size="11" value=""/> (latlong)
+              {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "winstart"}}
             </td>
           </tr>            
           <tr>
             <td>From</td>
             <td>
-              <input type="text" name="wintolat" size="11" value=""/>,
-              <input type="text" name="wintolong" size="11" value=""/> (latlong)
-            </td>
-          </tr>
-<!--
-          <tr>
-            <td>To (testing)</td>
-            <td>
-              {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "winstart"}}
-            </td>
-          </tr>            
-          <tr>
-            <td>From (testing)</td>
-            <td>
               {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "winend"}}
             </td>
-          </tr>            
-          -->
+          </tr>
 
 <!--          <tr>
-            <td>Altitude</td>
+            <td>Window Altitude</td>
             <td>
               Min:<input type="text" name="winmin" size="7" value=""/>,
               Max:<input type="text" name="winmax" size="7" value=""/>
@@ -183,14 +161,7 @@ Skyline Window
           <tr>
             <td>Reference Point</td>
             <td>
-              <b>{refpoint}</b>
-              <select name="refpt_waypoint">
-                <option value="" selected="1">(waypoint)</option> 
-                {{range .Waypoints}}
-                <option value="{{.}}">{{.}}</option>{{end}}
-              </select>, or latlong
-              <input type="text" name="refptlat" size="7" value=""/>,
-              <input type="text" name="refptlong" size="7" value=""/>
+              {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "refpt"}}
             </td>
           </tr>
 
