And spell it right

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -161,7 +161,7 @@ Skyline Window
           <tr>
             <td>Reference Point</td>
             <td>
-              <b>{refpt}</b>
+              <b>{refpoint}</b>
               {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "refpt"}}
             </td>
           </tr>
