--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -27,13 +27,19 @@
       <div class="box">
         {{.VisualizationFormTag}}
         <table>
-          <tr><td colspan="8">
-              <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>,<!-- 
-              <button type="submit" name="viewtype" value="track" class="btn-link">TrackPoints</button>,-->
+          <tr><td colspan="10">
+              <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>
+              [noFurn:<input type="checkbox" name="nofurniture"/>;
+              colorBy<select name="colorby">
+                <option value="source" selected="1">DataSource</option>
+                <option value="altitude">Altitude</option>
+                <!--<option value="complaints">#Complaints</option> -->
+              </select>
+              ]
+              <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>
-              options: [<input type="text" name="length" size="3" value="100"/>NM by
+              [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
-              noFurn:<input type="checkbox" name="nofurniture"/>;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
               showAngle:<input type="checkbox" name="showangleofinclination"/>;
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
