--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -33,7 +33,8 @@
               colorBy<select name="colorby">
                 <option value="source" selected="1">DataSource</option>
                 <option value="altitude">Altitude</option>
-                <!--<option value="complaints">#Complaints</option> -->
+                <option value="complaints">#Complaints</option>
+                <option value="totalcomplaints">Total#Complaints</option>
               </select>
               ]
               <br/>
