--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -33,6 +33,7 @@
               colorBy<select name="colorby">
                 <option value="source" selected="1">DataSource</option>
                 <option value="altitude">Altitude</option>
+                <option value="angle">AngleOfInclination</option>
                 <option value="complaints">#Complaints</option>
                 <option value="totalcomplaints">Total#Complaints</option>
               </select>
