Add link to reporting instructions; add waypoints for East Bay

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -234,6 +234,7 @@ Skyline Window
 <!--
         <p> Debug: <input type="text" name="debug" value="1" size="1"/></p>
 -->
+        <p>Instructions: <a href="https://goo.gl/2MVVSU"><code>https://goo.gl/2MVVSU</code></a></p>
         <p>Data only really starts at 11:30am on Wed Sep 23.</p>
         
       </div>
