--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -207,9 +207,7 @@ Skyline Window
             
           <tr>
             <td>Line opacity</td>
-            <td>
-              <input type="text" name="maplineopacity" size="4"
-              value="0.3"/> (for vector maps)
+            <td> (this has finally moved to the results page)
             </td>
           </tr>
 
