--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -30,13 +30,14 @@
           <tr><td colspan="10">
               <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>
               [noFurn:<input type="checkbox" name="nofurniture"/>;
-              colorBy<select name="colorby">
+              colorBy:<select name="colorby">
                 <option value="source" selected="1">DataSource</option>
                 <option value="altitude">Altitude</option>
                 <option value="angle">AngleOfInclination</option>
                 <option value="complaints">#Complaints</option>
                 <option value="totalcomplaints">Total#Complaints</option>
-              </select>
+              </select>;
+              lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.3"/>
               ]
               <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>
