--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -31,14 +31,13 @@
               <button type="submit" name="viewtype" value="vector" class="btn-link">VectorMap</button>
               [noFurn:<input type="checkbox" name="nofurniture"/>;
               colorBy:<select name="colorby">
-                <option value="source" selected="1">DataSource</option>
-                <option value="altitude">Altitude</option>
+                <option value="source">DataSource</option>
+                <option value="altitude" selected="1">Altitude</option>
                 <option value="angle">AngleOfInclination</option>
                 <option value="complaints">#Complaints</option>
                 <option value="totalcomplaints">Total#Complaints</option>
               </select>;
-              lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.3"/>
-              ]
+              lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>]
               <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
