Tweaks to support altitude graphs for departures.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -39,7 +39,7 @@
               </select>;
               lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>]
               <br/>
-              <button type="submit" name="viewtype" value="descent" class="btn-link">DescentGraph</button>
+              <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
               <input type="text" name="alt" size="5" value="30000"/>ft;
               showAccel:<input type="checkbox" name="showaccelerations"/>;
@@ -47,7 +47,7 @@
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
               dest:<input size="5" type="text" name="airportdest" value="KSFO"/>
-              ]
+              asDepartures:<input type="checkbox" name="asdepartures"/>]
           </td></tr>
           <tr><td colspan="8">
               <b>Checkboxes</b>:[
