Get gistorical search working on DBv2. Add maxFlights limit to the UI displays.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -37,7 +37,8 @@
                 <option value="complaints">#Complaints</option>
                 <option value="totalcomplaints">Total#Complaints</option>
               </select>;
-              lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>]
+              lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>,
+              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
               <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
               [<input type="text" name="length" size="3" value="100"/>NM by
@@ -47,7 +48,8 @@
               avgWin:<input size="4" type="text" name="averagingwindow" value="0s"/>
               sampleRate:<input size="4" type="text" name="sample" value="15s"/>
               dest:<input size="5" type="text" name="airportdest" value="KSFO"/>
-              asDepartures:<input type="checkbox" name="asdepartures"/>]
+              asDepartures:<input type="checkbox" name="asdepartures"/>,
+              maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
           </td></tr>
           <tr><td colspan="8">
               <b>Checkboxes</b>:[
