Allow explicit colors to be defined as a coloring strategy.

--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -36,8 +36,10 @@
                 <option value="angle">AngleOfInclination</option>
                 <option value="complaints">#Complaints</option>
                 <option value="totalcomplaints">Total#Complaints</option>
+                <option value="explicit">ExplicitColor</option>
               </select>;
               lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>,
+              explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
               maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
               <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
