Add a new form option for reports, and use it for the approach signature report

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -167,6 +167,14 @@ Skyline Window
           </tr>
           
           <tr>
+            <td>Text string</td>
+            <td>
+              <b>{str}</b> <input type="text" name="textstring"
+              size="8" value=""/> (a string needed by the report)
+            </td>
+          </tr>
+
+          <tr>
             <td>Altitude Tolerance</td>
             <td>
               <b>{tol}</b> <input type="text" name="altitudetolerance"
