--- a/ui/templates/fdb3-tracks.html
+++ b/ui/templates/fdb3-tracks.html
@@ -5,6 +5,7 @@
   <body>
     <div id="map"></div>
     <div id="legend"></div>
+    <div id="details"></div>
     <script type="text/javascript">
       {{template "js-map2-setup" . }}
       {{template "js-map2-points" . }}
