--- a/ui/templates/report3-results.html
+++ b/ui/templates/report3-results.html
@@ -40,6 +40,8 @@
               </select>;
               lineOpacity:<input type="text" name="maplineopacity" size="4" value="0.6"/>,
               explicitColor:<input type="text" name="explicitcolor" size="8" value=""/>,
+              minAltitude:<input type="text" name="minaltitude" size="5" value=""/>,
+              maxAltitude:<input type="text" name="maxaltitude" size="5" value=""/>,
               maxFlights:<input type="text" name="maxflights" size="4" value="1000"/>]
               <br/>
               <button type="submit" name="viewtype" value="descent" class="btn-link">AltitudeGraph</button>
