More waypoint selectors

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -56,6 +56,46 @@
             </td>
           </tr>
           <tr>
+            <td/>
+            <td>
+              <select name="waypoint4">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              <select name="waypoint5">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              <select name="waypoint6">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>.
+            </td>
+          </tr>
+          <tr>
+            <td/>
+            <td>
+              <select name="waypoint7">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              <select name="waypoint8">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              <select name="waypoint9">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>.
+            </td>
+          </tr>
+          <tr>
             <td>But EXCLUDING waypoints</td>
             <td>
               <select name="notwaypoint1">
