:SFO_NE and :SFO_NW, and more not-waypoints

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -98,17 +98,55 @@
           <tr>
             <td>But EXCLUDING waypoints</td>
             <td>
-              <select name="notwaypoint1">
+              !<select name="notwaypoint1">
                 <option value="" selected="1">(waypoint)</option> 
                 {{range .Waypoints}}
                 <option value="{{.}}">{{.}}</option>{{end}}
               </select>,
-              <select name="notwaypoint2">
+              !<select name="notwaypoint2">
                 <option value="" selected="1">(waypoint)</option> 
                 {{range .Waypoints}}
                 <option value="{{.}}">{{.}}</option>{{end}}
               </select>,
-              <select name="notwaypoint3">
+              !<select name="notwaypoint3">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>.
+          </tr>
+          <tr>
+            <td/>
+            <td>
+              !<select name="notwaypoint4">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              !<select name="notwaypoint5">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              !<select name="notwaypoint6">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>.
+          </tr>
+          <tr>
+            <td/>
+            <td>
+              !<select name="notwaypoint7">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              !<select name="notwaypoint8">
+                <option value="" selected="1">(waypoint)</option> 
+                {{range .Waypoints}}
+                <option value="{{.}}">{{.}}</option>{{end}}
+              </select>,
+              !<select name="notwaypoint9">
                 <option value="" selected="1">(waypoint)</option> 
                 {{range .Waypoints}}
                 <option value="{{.}}">{{.}}</option>{{end}}
