Support negative geo-restrictions

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -196,6 +196,13 @@
             </td>
           </tr>
 
+          <tr>
+            <td>NOT logic</td>
+            <td>
+              Exclude, not include <input type="checkbox" name="boxexcludes"/>
+            </td>
+          </tr>
+          
           <tr><td colspan="2"><br/><b>Geo restrictions (2)</b>:
               And/or, define a geo <b>{window}</b> that flights must fly through.<br/>
           </td></tr>
