New report, flown distance between two waypoints

--- a/ui/templates/report3-form.html
+++ b/ui/templates/report3-form.html
@@ -282,6 +282,13 @@ Skyline Window
               {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "refpt"}}
             </td>
           </tr>
+          <tr>
+            <td>Reference Point 2</td>
+            <td>
+              <b>{refpoint2}</b>
+              {{template "widget-waypoint-or-pos" dict "Waypoints" .Waypoints "Name" "refpt2"}}
+            </td>
+          </tr>
 
           <tr>
             <td>Duration</td>
